@@ -154,7 +154,7 @@ Once the table has been verified as correct and complete, it is imported to the 
 To import the text file into the database, the following comand is used:
 .IP
 mged>
-.B binary \-i u c _DENSITIES
+.B bo \-i u c _DENSITIES
 .I filename
 
 .SH GEOMETRY ERROR DETECTION
